# RoboDog

./: .gitignore  README.md
src/controller_pkg/: CMakeLists.txt  controller.launch  package.xml
src/controller_pkg/src/: controller_node.cpp  filter_point_cloud.cpp  pathplanning_node.cpp  test_controller.cpp  visualization.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: Robodog.rviz  simulation.launch  unity_ros.launch
src/simulation/param/: costmap_common_params.yaml  local_costmap_params.yaml
src/simulation/src/: goal_pub.cpp  imu_parser.h  state_estimate_corruptor_node.cpp  true_state_parser.h  unity_command_stream.h  unity_ros.cpp  w_to_unity.cpp
